--- a/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
+++ b/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
@@ -222,6 +222,8 @@ a.footer-furtography
       +clearfix
       clear: both
       margin-bottom: 24px
+      width: 100%
+      text-align: left
       .label-shelter-title
         font-weight: bold
 
@@ -441,10 +443,10 @@ div[aria-labelledby="ui-dialog-title-dosomething-fb-apps-enter-zip-form"]
     top: -24px
 
 // Styling for the 'Find your shelter' pop up
-div[aria-labelledby="ui-dialog-title-dosomething-picsforpets-shelters-options-form"].ui-dialog
-  overflow: hidden !important
-  .ui-icon.ui-icon-closethick
-    top: -14px
+// div[aria-labelledby="ui-dialog-title-dosomething-picsforpets-shelters-options-form"].ui-dialog
+//   overflow: hidden !important
+//   .ui-icon.ui-icon-closethick
+//     top: -14px
 
-.item-list .pager li
-  padding: 0
+// .item-list .pager li
+//   padding: 0
